--- a/_posts/2023-12-27-yasso_800s.md
+++ b/_posts/2023-12-27-yasso_800s.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  "Yasso 800s"
-date:   2023-11-27
-categories: marathon
+date:   2023-12-27
+categories: blog
 ---
 
 亚索800（Yasso 800s）是一套提高跑步速度，并被众多跑者拿来预测全马成绩的训练方法。
