--- a/_posts/2023-11-22-git_init.md
+++ b/_posts/2023-11-22-git_init.md
@@ -6,19 +6,16 @@ categories: blog
 ---
 
 下载对应系统版本并安装git，检查安装情况：
+`git --version`
 
-git --version
 配置config并检查配置情况：
+`git config --global user.name "your name"`
+`git config --global user.email "your email"`
+`git config -l`
 
-git config --global user.name "your name"
-git config --global user.email "your email"
-
-git config -l
 配置ssh:
-
-ssh-keygen -t rsa -C "your github email"
+`ssh-keygen -t rsa -C "your github email"`
 return * 3
 去到Github - Settings - SSH and GPG keys, new SSH key 将 上一步生成的 ~/.ssh 目录下的 id_rsa.pub 文件内容复制到新建的SSH key中，并建立连接：
-
-ssh -T git@github.com
+`ssh -T git@github.com`
 接下来就是正常git远程仓库操作。
