--- a/_posts/2023-11-30-breaking_3.md
+++ b/_posts/2023-11-30-breaking_3.md
@@ -9,9 +9,10 @@ categories: blog
 
 马拉松三小时, 意味着半马成绩需要1小时26分, 十公里39分10秒, 五公里18分45秒。
 
-类别	5k	10k	half marathon	marathon
-目标成绩	18'45''	39'10''	1h26min	3h
-平均配速	3'45''	3'55''	4'05''	4'16''
+｜类别｜5k｜10k｜half marathon｜marathon｜
+｜---｜---｜---｜-------------｜--------｜
+｜目标成绩｜18'45''｜39'10''｜1h26min｜3h｜
+｜平均配速｜3'45''｜3'55''｜4'05''｜4'16''｜
 但是这次马拉松之后, 我感觉自己状态很好, 即使赛前一周都带着点感冒, 赛后也没完全康复, 但身体没有任何疲惫感。目前的身体应该是有进入330的水平, 那我想为何不dream big enough, 干脆在接下来12周里计划一个breaking 3, 又有什么损失呢？
 
 weeks to go	volume by week	Mon	Tue	Wed	Thu	Fri	Sat	Sun
