--- a/_posts/2023-11-22-website.md
+++ b/_posts/2023-11-22-website.md
@@ -8,47 +8,45 @@ categories: blog
 你是否也羡慕一些大佬通过一个自己控制的网站分享自己的观点，甚至用其作为个人简历？
 
 类似:
-Vitalik Buterin's website
-Naval
-Sam Altman
+[Vitalik Buterin's website](https://vitalik.eth.limo/)
+[Naval](https://nav.al/)
+[Sam Altman](https://blog.samaltman.com/)
 
 这个过程最重要的部分当然是内容本身，公众号也好，网站也好，或者社交平台、播客、短视频平台等各种传播形式。需要的是平日习惯性地信息吞吐。当然还需要的一点是基础的web知识，这很好获取。
 
 那么我们今天就动手实操一下吧。
 
-
 互联网域名分配是由一家总部位于美国加州的非盈利国际组织 ICANN (The Internet Corporation for Assigned Names and Numbers)管理。用户通过域名注册商向其提起注册申请，获得域名的使用权。
 
 对比市场上几家注册商(Name.com, GoDaddy,Aliyun)，可以结合自己的用途、面向的受众、对服务器备案、域名实名的态度做选择。我的网站主要以记录个人状态为主，受众地理位置、交互不在考虑范围，选择了相对方便的阿里云。
 
-一、 购买域名
+## 一、 购买域名
 在万网搜索自己意向的域名， 购买5年花费222元。
 
 注：如果网站或App托管在中国内地的服务器上，需根据所在省市的管局规则进行ICP备案申请和公安联网备案，我们这里不选择将其解析至中国服务器，因此可以忽略后面二至五步。
 
-二、 购买云服务器
+## 二、 购买云服务器
 99元/年云服务器 目前市场上能找到最便宜的云服务器，2核2G内存3M固定带宽 40G ESSD云盘，适合个人建站，我选择安装了ubuntu 22.04作为预设系统。
 
 1. 修改主机名
+```
 vi /etc/hostname
-
 vi /etc/hosts
-
 reboot
-
+```
 2. 创建新用户
-adduser thekingofcool
+`adduser thekingofcool`
 
 3. 安装Apache
+```
 sudo apt-get update sudo apt-get install apache2
-
 sudo /etc/init.d/apache2 restart
-
 curl 127.0.0.1
-
-三、 网站备案
+```
+## 三、 网站备案
 阿里云ICP代备案系统 备案网站主办人信息及域名云服务器实例IP信息，备案成功后在网站首页底部中间位置放置ICP备案号并链接至“https://beian.miit.gov.cn”， 并将网站提交公安备案。
-四、 域名解析
+
+## 四、 域名解析
 添加 A 记录可实现将域名指向 IPv4 地址。
 
 登录云解析DNS产品控制台。
@@ -59,36 +57,37 @@ curl 127.0.0.1
 解析线路：选择默认（默认为必选项，如未设置会导致部分用户无法访问 )。
 记录值：记录值为IP地址，填写 IPv4 地址。
 TTL：为缓存时间，数值越小，修改记录各地生效时间越快，默认为10分钟。
-五、SSL认证
+
+## 五、SSL认证
 DV单域名SSL免费证书购买 配置并下载SSL证书
-六、创建Github Page
+
+## 六、创建Github Page
 根据教程Github Page登录github账号，创建一个 [your_user_name].github.io的仓库，your_user_name为你的github用户名;
 
 进入这个仓库中新建一个Hello World文件，命名为index.html;
 
 选择Settings - Page，默认是从master分支的root路径构建网页。 一般来说deploy几分钟之后访问[your_user_name].github.io，就可以看到前面创建的Hello World页面。
 
-七、将域名解析到Github Page
+## 七、将域名解析到Github Page
 首先去到自己的域名解析页面，添加CNAME将域名指向另外一个域名，记录值为上一步骤的github page: [your_user_name].github.io；
 
 这时回到上一步的github page，在Custom domain中填写自己的域名，check dns；
 
-八、利用Cloudflare进行CDN加速以及SSL加密
+## 八、利用Cloudflare进行CDN加速以及SSL加密
 注册一个Cloudflare, add a site，输入自己的域名；
 
 添加DNS记录，选择A Type, Name use @ for root,
 
 IPV4 address通过ping前面github page的域名获取：
-
-ping [your_user_name].github.io
+`ping [your_user_name].github.io`
 去到自己的域名DNS管理中修改DNS，
 
 使用Cloudflare Nameservers: davina.ns.cloudflare.com, seth.ns.cloudflare.com替换掉之前的DNS服务器。
 
 To use Cloudflare, ensure your authoritative DNS servers, or nameservers have been changed. These are your assigned Cloudflare nameservers.
+
 在持续下一步的点击中，选择使用ssl证书，开启http跳转https;
 
 之后再去github page界面，勾选Enforce HTTPS选框；
 
 至此，输入https://[your_domain_name]即可定向到由Github免费提供的Github Page，你也就最低成本拥有了个人博客。
-
