--- a/_posts/2023-11-22-website.md
+++ b/_posts/2023-11-22-website.md
@@ -8,17 +8,17 @@ categories: blog
 你是否也羡慕一些大佬通过一个自己控制的网站分享自己的观点，甚至用其作为个人简历？
 
 类似:
-[Vitalik Buterin's website](https://vitalik.eth.limo/)
-[Naval](https://nav.al/)
+[Vitalik Buterin's website](https://vitalik.eth.limo/), 
+[Naval](https://nav.al/), 
 [Sam Altman](https://blog.samaltman.com/)
 
 这个过程最重要的部分当然是内容本身，公众号也好，网站也好，或者社交平台、播客、短视频平台等各种传播形式。需要的是平日习惯性地信息吞吐。当然还需要的一点是基础的web知识，这很好获取。
 
 那么我们今天就动手实操一下吧。
 
-互联网域名分配是由一家总部位于美国加州的非盈利国际组织 ICANN (The Internet Corporation for Assigned Names and Numbers)管理。用户通过域名注册商向其提起注册申请，获得域名的使用权。
+互联网域名分配是由一家总部位于美国加州的非盈利国际组织 [ICANN](https://www.icann.org/) (The Internet Corporation for Assigned Names and Numbers)管理。用户通过域名注册商向其提起注册申请，获得域名的使用权。
 
-对比市场上几家注册商(Name.com, GoDaddy,Aliyun)，可以结合自己的用途、面向的受众、对服务器备案、域名实名的态度做选择。我的网站主要以记录个人状态为主，受众地理位置、交互不在考虑范围，选择了相对方便的阿里云。
+对比市场上几家注册商([Name.com](https://www.name.com/), [GoDaddy](https://www.godaddy.com/),[Aliyun](https://www.aliyun.com/))，可以结合自己的用途、面向的受众、对服务器备案、域名实名的态度做选择。我的网站主要以记录个人状态为主，受众地理位置、交互不在考虑范围，选择了相对方便的阿里云。
 
 ## 一、 购买域名
 在万网搜索自己意向的域名， 购买5年花费222元。
@@ -35,7 +35,9 @@ vi /etc/hosts
 reboot
 ```
 2. 创建新用户
-`adduser thekingofcool`
+```
+adduser thekingofcool
+```
 
 3. 安装Apache
 ```
@@ -44,7 +46,7 @@ sudo /etc/init.d/apache2 restart
 curl 127.0.0.1
 ```
 ## 三、 网站备案
-阿里云ICP代备案系统 备案网站主办人信息及域名云服务器实例IP信息，备案成功后在网站首页底部中间位置放置ICP备案号并链接至“https://beian.miit.gov.cn”， 并将网站提交公安备案。
+在阿里云ICP代备案系统备案网站主办人信息及域名云服务器实例IP信息，备案成功后在网站首页底部中间位置放置ICP备案号并链接至“https://beian.miit.gov.cn”， 并将网站提交公安备案。
 
 ## 四、 域名解析
 添加 A 记录可实现将域名指向 IPv4 地址。
@@ -59,10 +61,10 @@ curl 127.0.0.1
 TTL：为缓存时间，数值越小，修改记录各地生效时间越快，默认为10分钟。
 
 ## 五、SSL认证
-DV单域名SSL免费证书购买 配置并下载SSL证书
+DV单域名SSL免费证书购买，配置并下载SSL证书。
 
 ## 六、创建Github Page
-根据教程Github Page登录github账号，创建一个 [your_user_name].github.io的仓库，your_user_name为你的github用户名;
+根据[Github Page教程](https://pages.github.com/)登录github，创建一个 [your_user_name].github.io的仓库，your_user_name为你的github用户名;
 
 进入这个仓库中新建一个Hello World文件，命名为index.html;
 
@@ -74,7 +76,7 @@ DV单域名SSL免费证书购买 配置并下载SSL证书
 这时回到上一步的github page，在Custom domain中填写自己的域名，check dns；
 
 ## 八、利用Cloudflare进行CDN加速以及SSL加密
-注册一个Cloudflare, add a site，输入自己的域名；
+注册一个[Cloudflare](https://www.cloudflare.com/), add a site，输入自己的域名；
 
 添加DNS记录，选择A Type, Name use @ for root,
 
