--- a/_posts/2021-11-14-web3.md
+++ b/_posts/2021-11-14-web3.md
@@ -7,10 +7,10 @@ categories: blog
 
 由于加密货币逐渐走进人们视野，Web3这个词也一再被人提及。究竟Web3意味着什么，它对我们的生活可能会带来哪些值得期待的改变？为了有一个准确而全面的认识，我想通过这篇文章做一个梳理。
 
-## 互联网历史
+### 互联网历史
 在这之前先迅速过一遍互联网发展的历史。如今看似繁荣的互联网，实际从诞生至今也才40年左右，Web1时代可以从20世纪80年代划到21世纪初，那时的互联网服务建立在普遍认可的开放协议(open protocols)(e.g.: TCP, IP, SMTP, HTTP)上，其规范基于互联网社区利益优先，这为构建互联网生态系统创造了一个稳定、公平的竞争环境，正是在这个创新时期，诞生了之后数十年中最有影响力的科技公司。
 
-第二阶段，从21世纪第一个十年的中期到现在，一些企业在互联网的开放协议之上构建了第二层专有的封闭协议(closed protocols)，这是一个中心化的时期，以追求经济利益为导向的科技公司开始构建自己的软件向人们提供服务。除去部分以游戏及会员订阅收费的公司，这些科技公司普遍通过收集用户数据并向其投放相应广告谋取利益。人们体验便捷生活的同时，以个人信息的控制权作为交换。就像一句话所说，「如果你没有为你使用的产品付钱，那你就是产品本身。」
+第二阶段，从21世纪第一个十年的中期到现在，一些企业在互联网的开放协议之上构建了第二层专有的封闭协议(closed protocols)，这是一个中心化的时期，以追求经济利益为导向的科技公司开始构建自己的软件向人们提供服务。除去部分以游戏及会员订阅收费的公司，这些科技公司普遍通过收集用户数据并向其投放相应广告谋取利益。人们体验便捷生活的同时，以个人信息的控制权作为交换。就像一句话所说，「**如果你没有为你使用的产品付钱，那你就是产品本身。**」
 
 随着2009年加密货币的横空出世，以及随后人们看到的中心化所带来的种种弊端(最近的facebook服务器宕机、随处可见的中心化机构审查)，加上近些年科技带动互联网基础设施的逐渐完善、网络速度的提升，一些人开始把互联网发展的方向的目光投向了区块链这一新兴领域。
 
@@ -22,14 +22,14 @@ categories: blog
 
 了解了Web3的发展方向，那么它到底包含了什么，我们又怎么能够参与其中呢？
 
-## DAO(Decentralized Autonomous Organization)
+### DAO(Decentralized Autonomous Organization)
 翻译成中文叫做去中心化自治组织，DAO 是一个成员分布于世界各地的在线的自治社区，社区的管理基于成员之间的共识，而不是某个中心化的领导团体。
 
 其中，去中心化的含义是规则不会因为某一个人或者某一中心化实体而改变；自治指的是写入智能合约的执行决策和逻辑计算是自动而不需要人工干预；组织则表示所有参与其中的实体。
 
 类比于现实世界的公司以及其他人与人、公司与人之间的关系，区别只是把所有规则的执行写成了智能合约放在区块链上进行「链上治理」，用「代码执行」代替了基于信任的「人为执行」，最大程度提高了履约的效率。
 
-## DeFi(Decentralized Finance)
+### DeFi(Decentralized Finance)
 去中心化金融。指的是使用去中心化的应用从事例如存钱、贷款、交易等金融活动。
 
 去中心化应用(Decentralized application)是指用代码编写的一系列智能合约(smart contract)，这些合约通常也被称为协议(protocols)。发布于区块链上的智能合约和我们平时看到的应用程序或者合同的不同之处就是dApp一旦发布到链上是不可篡改的，合约升级的情况也可能发生，但必须得到大部分节点的认同，因此一定程度上也就避免了恶意行为者试图的破坏以及操控。
@@ -38,12 +38,12 @@ categories: blog
 
 点对点支付无需任何中心化机构，当你的钱包地址(可以理解为账号)向另一个地址发起一笔转账，在使用你的私钥对这笔交易进行签名后 ，只需要部分链上节点确认这比交易合法并向周围节点发出广播，即视作完成了这笔转账。它的低手续费、近实时完成、无边界易获取、点对点，使其在日常使用与商业活动中有着极佳的使用价值。
 
-## 稳定币以及中央银行数字货币
+### 稳定币以及中央银行数字货币
 稳定币是一种私人发布、价值锚定在某一种法定货币的一种加密货币，其拥有加密货币的优点又避免了价值波动性，例如USDT、USDC、BUSD等。
 
 中央银行的数字货币是由各国政府发行并代表主权义务的数字货币，提供了类似稳定币的好处，但依然存在中心化所带来的隐私和安全问题，例如数字人民币、数字美元、数字欧元等。
 
-## NFT and GameFi and SocialFi
+### NFT and GameFi and SocialFi
 区块链今年火爆的两个领域NFT和GameFi(GameFi 应该还只算开始，真正的火爆可能需要等到明年)，NFT(non-fungible token)，非同质化代币，指的是任何人将图片、视频、音频、网页甚至游戏，任何信息发布到区块链上，利用区块链的不可篡改和记录透明性成为一份独一无二的数字资产(digital asset)。已经有为数众多的画家、音乐人、电影制作者、体育明星、游戏开发者等艺术创造者投身于其中，以实现直接与他们的支持者进行连接。
 
 NFT和GameFi只是世界区块链化的第一步尝试，相信随着接下来五到十年的探索，人们将进入SocialFi开启元宇宙(Metaverse)的篇章。
