--- a/_posts/2024-06-16-big_day.md
+++ b/_posts/2024-06-16-big_day.md
@@ -4,6 +4,7 @@ title:  "Wedding Speech"
 date:   2024-06-16
 categories: blog
 ---
+## 陈:
 
 刚认识你时，记得漫威剧《Loki》正在更新，最开始对你的印象就是，我们就像平行宇宙中的不同变体——
 
@@ -28,3 +29,39 @@ categories: blog
 同时，我也要感谢从繁忙的工作和学业中赶来的弟弟和弟妹，未来在你们身上有着一切可能。以后无论身处何处，血浓于水的情感纽带都将始终将我们紧密连结。在这个变革的时代，让我们团结一心，共同努力，使这个大家庭更加繁荣和充满活力。
 
 再次感谢大家来参加我们的婚礼，希望你们这几天都能玩得开心。
+
+---
+
+## 杨:
+
+陈先生，你好。
+
+我一直觉得，下定决心结婚是非常困难的一件事。要跟这个人朝夕相处几十年，要从今天开始以后每天都面对面在枕头上喷气儿，要共同养育一个孩子，甚至更多。甚至，你还拥有我在手术台上昏迷不醒时决定我要不要继续手术的权利，相当于我得把一半的命给你，我怎么能轻而易举的交出自己的命呢？
+
+所以，陈先生，我必然不会因为你是高富帅而嫁给你，当然，这三个字也不太是用来形容你。而是因为你善良，温厚，努力上进，真实简单吗？这是我想到的夸赞你的话，但这也不是作为我爱你的理由。
+
+比起这些所有人可见的美好品质，我更珍惜你的尊重，支持和包容，以及和你在一起后每一天相处的点滴，都让我深信不疑，这个人我愿意和他在一起。
+
+这可能就是我今天站在这里的原因。我们在如此平凡琐碎的生活中，拥有对方有趣的灵魂，拥有彼此的绝对信任，拥有自由，平等和尊重。拥有对方无条件的鼓励和支持。
+
+以前我一直觉得，一个人能过得很开心，但有了你才发现，两个人原来可以更好。
+
+我爱的，是我们拥有各自的光芒，同时也依赖对方。
+
+谢谢你，让我期待和你一起的未来。
+
+我要我们不止新婚快乐，我要我们一直都快乐。
+
+---
+
+今天算是我人生中很重要的时刻，对于我这种时常心怀感激却不善于表露的人来说也是一个表达谢意的绝佳机会。
+
+首先最想感谢的是我的爸爸妈妈，谢谢你们30年来的养育，在能力范围内创造最好的条件把我培养长大，让我在爱的环境里健康成长，感谢你们包容了我每一个特立独行的勇气和决定。
+
+我是这个世界上很普通的女儿，经常会惹你们生气失望，但你们在我眼里是最好的爸爸妈妈，我从未让你们骄傲，你们却待我如宝。感谢你们陪着我一起长大。
+
+有人说过:“父母存在的意义不是给予孩子多舒适和富裕的生活，而是当你想到你的父母时，你的内心就会充满力量会感受到温暖，从而拥有克服困难的勇气和能力，因此获得人生真正的乐趣和自由。”
+
+好巧，我跟陈强都是这么幸运和幸福的人。我们都有对我们最好的爸爸妈妈，并且从今天开始，我们的幸运和幸福翻倍。未来，就让我们俩一起陪伴你们，保护你们。
+
+最后，两位爸爸，父亲节快乐!
