website add notes

--- a/_posts/2023-11-22-website.md
+++ b/_posts/2023-11-22-website.md
@@ -23,7 +23,9 @@ categories: blog
 ## 一、 购买域名
 在万网搜索自己意向的域名， 购买5年花费222元。
 
-注：如果网站或App托管在中国内地的服务器上，需根据所在省市的管局规则进行ICP备案申请和公安联网备案，我们这里不选择将其解析至中国服务器，因此可以忽略后面二至五步。
+注：如果网站或App托管在中国内地的服务器上，需根据所在省市的管局规则进行ICP备案申请和公安联网备案。
+
+**如果不选择将域名解析至中国服务器，可以忽略后面二至五步。**
 
 ## 二、 购买云服务器
 99元/年云服务器 目前市场上能找到最便宜的云服务器，2核2G内存3M固定带宽 40G ESSD云盘，适合个人建站，我选择安装了ubuntu 22.04作为预设系统。
