--- a/_posts/2024-06-16-big_day.md
+++ b/_posts/2024-06-16-big_day.md
@@ -62,6 +62,6 @@ categories: blog
 
 有人说过:“父母存在的意义不是给予孩子多舒适和富裕的生活，而是当你想到你的父母时，你的内心就会充满力量会感受到温暖，从而拥有克服困难的勇气和能力，因此获得人生真正的乐趣和自由。”
 
-好巧，我跟陈强都是这么幸运和幸福的人。我们都有对我们最好的爸爸妈妈，并且从今天开始，我们的幸运和幸福翻倍。未来，就让我们俩一起陪伴你们，保护你们。
+好巧，我跟陈都是这么幸运和幸福的人。我们都有对我们最好的爸爸妈妈，并且从今天开始，我们的幸运和幸福翻倍。未来，就让我们俩一起陪伴你们，保护你们。
 
 最后，两位爸爸，父亲节快乐!
