--- a/_posts/2024-08-24-wukong.md
+++ b/_posts/2024-08-24-wukong.md
@@ -5,62 +5,64 @@ date:   2024-08-24
 categories: blog
 ---
 ### PC Build List
+Total cost is 5310.
 
-| item     | 型号                          | 渠道  | 价格 |
-|:-------- |:----------------------------- | ----- | ---- |
-| CPU      | AMD R5 7500F                  | PDD   | 929  |
-| 内存条   | 光威 天策 16g * 2 6400 C32 M  | PDD   | 679  |
-| 显卡     | GeForce RTX 战斧 4060 DUO 8G  | PDD   | 2108 |
-| 散热器   | 利民 AX120R SE ARGB           | PDD   | 81   |
-| 电源     | 鑫谷 GM650M 金牌全模          | PDD   | 349  |
-| 机箱     | 航嘉 S920 全景                | PDD   | 160  |
-| 硬盘     | 金士顿 480g SSD               | TMall | 265  |
-| 主板     | 技嘉 AMD B650M GAMING WIFI    | JD    | 739  |
-| 硬盘加购 | Lexar ARES M.2 pcie4.0 nvmeSSD 1T | TMall | 521  |
+| item              | model                             | channel | price |
+|:----------------- |:--------------------------------- | ------- | ----- |
+| CPU               | AMD R5 7500F                      | PDD     | 929   |
+| RAM               | 光威 天策 16g * 2 6400 C32 M      | PDD     | 679   |
+| GPU               | GeForce RTX 战斧 4060 DUO 8G      | PDD     | 2108  |
+| Heat sink         | 利民 AX120R SE ARGB               | PDD     | 81    |
+| Power supply unit | 鑫谷 GM650M 金牌全模              | PDD     | 349   |
+| computer case     | 航嘉 S920 全景                    | PDD     | 160   |
+| SSD               | 金士顿 480g SSD                   | TMall   | 265   |
+| Motherboard       | 技嘉 AMD B650M GAMING WIFI        | JD      | 739   |
+| SSD(optional)     | Lexar ARES M.2 pcie4.0 nvmeSSD 1T | TMall   | 521   |
 
-### Create Bootable Windows 11 USB Disk on MacOS
-#### Utilities - Disk Utility
-Erase your USB External Physical Volume to MS-DOS (FAT32);
-Rename the USB Drive name to WIN11
+### Create Bootable Windows 11 USB Disk
+When the computer is ready, you need a Windows system boot disk. I'll do this on a MacOS.
 
-#### Download Window 11 IOS
-Download [Windows 11](https://www.microsoft.com/software-download/windows11) Disk Image (ISO);
+#### Format USB Disk
+Go to Application, find Utilities - Disk Utility;
+Choose your Disk, and erase the USB External Physical Volume to MS-DOS (FAT32);
+Rename the USB Drive to **WIN11** or whatever you like.
 
-#### Install wimlib
+#### Download System Image
+Download [Windows 11](https://www.microsoft.com/software-download/windows11) Disk Image (ISO) to your computer;
+
+#### Making a Boot Disk
+1. Install wimlib
 ```
 brew install wimlib
 ```
 
-#### Mount the ISO file in a folder
+2. Mount the ISO file into a folder
 ```
 hdiutil mount Downloads/Win11_23H2_English_x64v2.iso
 ```
 
-#### Copy all Windows ISO contents into the USB Drive
+3. Copy all Windows ISO contents into the USB Disk
 ```
 rsync -vha --exclude=sources/install.wim /Volumes/CCCOMA_X64FRE_EN-US_DV9/* /Volumes/WIN11
 ```
 
-#### Split `install.wim` file in two parts if the size is bigger than 4GB
+4. Split the installation file in two parts if the size is bigger than 4GB
 ```
 wimlib-imagex split /Volumes/CCCOMA_X64FRE_EN-US_DV9/sources/install.wim /Volumes/WIN11/sources/install.swm 3800
 ```
 
-#### Eject USB device to use it for OS installation
+5. Eject USB device to use it for OS installation.
 
 ### Troubleshooting
-#### windows系统安装过程中，遇到系统可用空间为零
-判断该固态硬盘内存有内容，选择delete清空磁盘；
-#### 系统安装过程中，提示磁盘为MBR磁盘，需要转为GPT
-1. **使用安装介质启动**：插入Windows 11安装U盘，重启计算机并进入BIOS设置，从U盘启动。
-2. **进入命令提示符**：
-    - 在Windows安装界面，选择“修复计算机”；
-    - 选择“疑难解答” > “命令提示符”。
-3. **使用DiskPart工具**：
-    - 在命令提示符中输入`diskpart`并按Enter；
-    - 输入`list disk`查看所有磁盘；
-    - 输入`select disk X`（X为您的目标磁盘号）；
-    - 输入`clean`以删除所有分区（注意：这将删除所有数据）；
-    - 输入`convert gpt`将磁盘转换为GPT格式。
-4. **退出DiskPart**：输入`exit`退出DiskPart。
-5. 继续安装。
+1. 0 free space when installing the system
+**Solution**: There is some content in the SSD, choose 'delete' to erase SSD.
+
+2. The selected disk has an MBR partition table. On EFI system, Windows can only be installed to GPT disks.
+**Solution**: 
+- Restart the computer, On the Windows installation screen, select 'Repair your computer'; Choose 'Troubleshoot' > 'Command Prompt'.
+- Enter `diskpart` to initiate the disk partition process;
+- Enter `list disk`. Make a note of the MBR disk number that you want to convert to GPT format;
+- Enter `select disk` _`<disk-number>`_, where `<disk-number>` is the MBR disk number to convert;
+- Enter `clean` to delete all partitions and volumes on the disk;
+- Enter `convert gpt` to convert the MBR disk to the GPT partition format.
+The diskpart process notifies you when the conversion completes.
