--- a/_posts/2024-09-06-spark.md
+++ b/_posts/2024-09-06-spark.md
@@ -22,7 +22,7 @@ categories: blog
 [Apache Spark](https://spark.apache.org/) 是由加州大学伯克利分校的一些研究员在 2009 年推出的一个研究项目，目的就是为了解决 Hadoop 的上述限制。Spark 推出了一个 RDD(Resilient Distributed Dataset) 的概念，使数据得以数据集的形式存储在内存中，使得数据读取和处理都更加快速。
 
 #### Language
-Spark 源代码是由 Scala 语言编写，Spark 支持使用 Python, SQL, Scala, Java, R 语言编写程序。Python 由于其易用性、丰富的资源库以及 Data Science, Machine Learning 领域开发者的偏好，已经成为 Spark 主推的编程语言。下面的演示都以 Python 为例。
+Spark 源码是由 Scala 语言编写，但提供了 Python, Scala, Java, R 的 API 接口进行编程。Python 由于其易用性、丰富的资源库以及和 Data Science, Machine Learning 的紧密结合，其已经成为 Spark 主推的编程语言。下面的演示都以 Python 为例。
 
 #### Installation
 Make sure java is installed on your system PATH, or the JAVA_HOME environment variable pointing to a Java installation.
@@ -34,46 +34,7 @@ sudo apt install default-jre
 pip install pyspark
 ```
 
-#### Concepts
-##### Spark 任务的运行模式
-- Local Mode: 单机运行，资源有限，适合用于手动调试；
-
-```bash
-spark-submit word_count.py
-
-python word_count.py
-
-spark-submit --master local[4] word_count.py
-```
-
-- Cluster Mode: 提交任务到分布式集群运行，可以利用更高的计算性能，适用于生产环境；
-
-```bash
-spark-submit --master yarn --deploy-mode cluster word_count.py
-
-spark-submit --master spark://<master-url>:<port> --deploy-mode cluster word_count.py
-
-spark-submit --master k8s://<master-url>:<port> --deploy-mode cluster word_count.py
-```
-
-- Client Mode: 任务的 Driver 在本地运行，实际计算任务分发到集群中的 Worker 节点运行，由于 Driver 在本地运行，可以方便地查看日志和调试信息；
-
-```bash
-spark-submit --master yarn --deploy-mode client word_count.py
-
-spark-submit --master spark://<master-url>:<port> --deploy-mode client word_count.py
-
-spark-submit --master k8s://<master-url>:<port> --deploy-mode client word_count.py
-```
-
-##### Spark 资源管理器
-Spark 资源管理器负责分配和调度集群资源(CPU, Memory, Disk, Network)
-1. [Standalone](https://spark.apache.org/docs/latest/spark-standalone.html): 默认的资源管理器；
-2. [YARN](https://spark.apache.org/docs/latest/running-on-yarn.html): 由 Hadoop 提供；
-3. [Mesos](https://spark.apache.org/docs/latest/running-on-mesos.html)(Deprecated): 由 Apache Mesos 提供;
-4. [Kubernetes](https://spark.apache.org/docs/latest/running-on-kubernetes.html): 由 Kubernetes 提供
-
-Word Count Example
+#### Word Count Example
 ```text
 PySpark is included in the official releases of Spark available in the Apache Spark website.
 For Python users, PySpark also provides pip installation from PyPI.
@@ -108,6 +69,45 @@ word_counts.write.csv(output_dir, header=True, mode="overwrite")
 # stop SparkSession
 spark.stop()
 ```
+
+#### Concepts
+##### Spark 任务的运行模式
+- Local Mode: 单机运行，资源有限，适合用于手动调试；
+
+```bash
+spark-submit word_count.py
+
+python word_count.py
+
+spark-submit --master local[*] word_count.py
+```
+
+- Client Mode: 任务的 Driver 在本地运行，实际计算任务分发到集群中的 Worker 节点运行，由于 Driver 在本地运行，可以方便地查看日志和调试信息；
+
+```bash
+spark-submit --master yarn --deploy-mode client word_count.py
+
+spark-submit --master spark://<master-url>:<port> --deploy-mode client word_count.py
+
+spark-submit --master k8s://<master-url>:<port> --deploy-mode client word_count.py
+```
+
+- Cluster Mode: 提交任务到分布式集群运行，可以利用更高的计算性能，适用于生产环境；
+
+```bash
+spark-submit --master yarn --deploy-mode cluster word_count.py
+
+spark-submit --master spark://<master-url>:<port> --deploy-mode cluster word_count.py
+
+spark-submit --master k8s://<master-url>:<port> --deploy-mode cluster word_count.py
+```
+
+##### Spark 资源管理器
+Spark 资源管理器负责分配和调度集群资源(CPU, Memory, Disk, Network)
+1. [Standalone](https://spark.apache.org/docs/latest/spark-standalone.html): 默认的资源管理器；
+2. [YARN](https://spark.apache.org/docs/latest/running-on-yarn.html): 由 Hadoop 提供；
+3. [Mesos](https://spark.apache.org/docs/latest/running-on-mesos.html)(Deprecated): 由 Apache Mesos 提供;
+4. [Kubernetes](https://spark.apache.org/docs/latest/running-on-kubernetes.html): 由 Kubernetes 提供
 
 #### Usage scenarios
 ##### Spark SQL
