--- a/_posts/2024-09-06-spark.md
+++ b/_posts/2024-09-06-spark.md
@@ -34,42 +34,6 @@ sudo apt install default-jre
 pip install pyspark
 ```
 
-#### Word Count Example
-```text
-PySpark is included in the official releases of Spark available in the Apache Spark website.
-For Python users, PySpark also provides pip installation from PyPI.
-This is usually for local usage or as a client to connect to a cluster instead of setting up a cluster itself.
-```
-
-```python
-from pyspark.sql import SparkSession
-from pyspark.sql.functions import explode, split, regexp_replace, col
-
-# init SparkSession
-spark = SparkSession.builder \
-    .appName("WordCount") \
-    .master("local") \
-    .getOrCreate()
-
-# read input file
-input_file = "word_count.txt"
-text_file = spark.read.text(input_file)
-
-# calculate word frequency
-word_counts = text_file \
-               .withColumn("cleaned_value", regexp_replace(col("value"), "[^\w\s]", "")) \
-               .select(explode(split(col("cleaned_value"), "\s+")).alias("word")) \
-               .groupBy("word") \
-               .count()
-
-# save result to output file
-output_dir = "word_count_output"
-word_counts.write.csv(output_dir, header=True, mode="overwrite")
-
-# stop SparkSession
-spark.stop()
-```
-
 #### Concepts
 ##### Spark 任务的运行模式
 - Local Mode: 单机运行，资源有限，适合用于手动调试；
@@ -109,6 +73,47 @@ Spark 资源管理器负责分配和调度集群资源(CPU, Memory, Disk, Networ
 3. [Mesos](https://spark.apache.org/docs/latest/running-on-mesos.html)(Deprecated): 由 Apache Mesos 提供;
 4. [Kubernetes](https://spark.apache.org/docs/latest/running-on-kubernetes.html): 由 Kubernetes 提供
 
+##### Spark 任务物理运行原理
+**1. 客户端提交任务**
+
+用户通过 spark-submit 命令提交一个 Spark 应用程序。这个应用程序包含了用户的代码和依赖项。
+
+**2. Driver 进程启动**
+
+Spark 应用程序在 Driver 进程中启动。Driver 负责以下任务：
+- 解析用户代码: 解析并执行用户代码中的 transformation 和 action 操作；
+- 生成 DAG: 将用户代码中的一系列 transformation 操作转换为一个有向无环图（DAG）；
+- 任务调度: 将 DAG 划分为多个阶段（stages），每个阶段包含一组可以并行执行的任务（tasks）。
+
+**3. 资源管理器分配资源**
+
+Driver 向集群的资源管理器（如 YARN、Mesos 或 Kubernetes）请求资源。资源管理器分配资源并启动 Executor 进程。
+
+**4. Executor 进程启动**
+
+Executor 进程在集群的工作节点（Worker Nodes）上启动。每个 Executor 负责以下任务：
+- 执行任务: 执行由 Driver 分配的任务；
+- 存储数据: 缓存和存储中间结果数据；
+- 报告状态: 向 Driver 报告任务的执行状态和结果。
+
+**5. 任务执行**
+
+Driver 将任务分配给各个 Executor。任务的执行过程如下：
+- 读取数据: 从数据源（如 HDFS、S3、Kafka 等）读取数据；
+- 执行计算: 根据用户代码中的 transformation 操作对数据进行处理；
+- 写入结果: 将计算结果写入到指定的存储位置（如 HDFS、S3、数据库等）。
+
+**6. 任务监控和容错**
+
+Spark 提供了多种机制来监控和处理任务的执行：
+- 任务重试: 如果某个任务失败，Spark 会自动重试该任务；
+- 数据备份: Spark 会将数据分片（partitions）备份到多个节点，以防止数据丢失；
+- 监控工具: Spark 提供了 Web UI 和其他监控工具，帮助用户监控任务的执行状态和性能。
+
+**7. 任务完成**
+
+当所有任务都成功完成后，Driver 会将最终结果返回给用户或写入到指定的存储位置。然后，Driver 和 Executor 进程会正常退出，释放资源。
+
 #### Usage scenarios
 ##### Spark SQL
 [Spark SQL](https://spark.apache.org/docs/latest/sql-programming-guide.html) 是 Spark 用于处理结构化数据的模块，它提供了一个编程抽象，支持 SQL 查询、Dataframe API 和 Dataset API，而不需要了解底层分布式计算的细节。
@@ -118,12 +123,115 @@ Spark 资源管理器负责分配和调度集群资源(CPU, Memory, Disk, Networ
 2. RDD 类型安全，DataFrame API 是非类型安全的，Dataset API 提供了类型安全的操作；
 3. Spark SQL 支持 [Hive](https://spark.apache.org/docs/latest/sql-data-sources-hive-tables.html)、[Avro](https://spark.apache.org/docs/latest/sql-data-sources-avro.html)、[Parquet](https://spark.apache.org/docs/latest/sql-data-sources-parquet.html)、[ORC](https://spark.apache.org/docs/latest/sql-data-sources-orc.html)、[JSON](https://spark.apache.org/docs/latest/sql-data-sources-json.html)、[JDBC](https://spark.apache.org/docs/latest/sql-data-sources-jdbc.html) 等多种数据源，而 RDD 需要用户自己实现对不同数据源的支持；
 
+**使用 Dataframe API 案例**
+```python
+# Import necessary libraries
+from pyspark.sql import SparkSession
+from pyspark.sql.functions import col, regexp_replace
+
+# Create a Spark session
+spark = SparkSession.builder.appName("SparkSQLExample").getOrCreate()
+
+# Read CSV data into a DataFrame
+ark_holdings_df = spark.read.csv(path="test_file/ark_holdings.csv", 
+                    header=True, 
+                    inferSchema=True)
+
+# Perform a query
+ark_holdings_df = ark_holdings_df \
+    .withColumn("market_value", regexp_replace(col("market_value"), "[$,]", "").cast("double"))
+result_df = ark_holdings_df \
+    .filter(col("market_value") > ark_holdings_df.filter(col("ticker") == "U").select(col("market_value")).first()[0]) \
+    .select(col("ticker"), col("market_value")) \
+    .orderBy(col("market_value").desc())
+
+# Show the result
+result_df.show(15, truncate=False)
+
+# Stop the Spark session
+spark.stop()
+```
+
+**使用 RDD API 案例**
+```python
+# Import necessary libraries
+from pyspark import SparkContext
+
+# Create a Spark context
+sc = SparkContext("local", "RDDExample")
+
+# Read CSV data into an RDD
+ark_holdings_rdd = sc.textFile("test_file/ark_holdings.csv")
+
+# Perform a query
+result_rdd = ark_holdings_rdd.filter(lambda line: "UNITY" in line) \
+    .map(lambda line: line.split('"')[1].replace(',', ''))
+
+# Show the result
+print(result_rdd.collect())
+
+# Stop the Spark context
+sc.stop()
+```
+
+**RDD 和 Dataframe 相互转换**
+```python
+# Dataframe 转 RDD
+df = spark.read.csv("test_file/ark_holdings.csv", header=True, inferSchema=True)
+rdd = df.rdd
+
+# RDD 转 Dataframe
+rdd = spark.sparkContext.parallelize([(1, "Alice"), (2, "Bob"), (3, "Cathy")])
+# 定义 DataFrame 的 schema
+from pyspark.sql import Row
+df = rdd.map(lambda x: Row(id=x[0], name=x[1])).toDF()
+
+```
+**Action 算子**
+
+Spark 有一个特性 Lazy Evaluation，当一个 Spark 操作被提交时，Spark 并不会立即执行任务，而是将任务转换为一系列的 RDD 操作，只有当遇到 Action 算子时，Spark 才会真正执行任务。通过 Lazy Evaluation, Spark 可以优化执行计划，避免存储大量中间结果，提高任务的执行效率。
+
+常见的 RDD action 算子有：collect, count, first, take, takeSample, reduce, fold, aggregate, foreach, saveAsTextFile, saveAsSequenceFile, saveAsObjectFile, countByKey, countByValue, takeOrdered, top, foreachPartition.
+
+常见的 DataFrame action 算子有：collect, count, first, take, show, head, foreach, write, describe, summary, toPandas.
+
 总的来说，Spark SQL 更适合处理结构化数据和需要高效查询优化的场景，而 RDD 更适合处理非结构化数据和需要自定义处理逻辑的场景。
 
 需要特别注意的是，Spark SQL 性能调优需要考虑的因素很多，包括数据倾斜、数据分区、数据格式、数据压缩、数据缓存等，根据实际情况参考 [Spark SQL 性能调优](https://spark.apache.org/docs/latest/sql-performance-tuning.html) 进行调整。
 
 ##### Pandas API on Spark
 [Pandas API on Spark](https://spark.apache.org/docs/latest/api/python/getting_started/quickstart_ps.html#) 是 Spark 提供的用于处理大规模数据集的 API，它提供了与 [Pandas](https://pandas.pydata.org/docs/getting_started/intro_tutorials/index.html) 类似的 API，使得用户可以方便地将 Pandas 的代码迁移到 Spark 上运行。
+
+**Pandas API on Spark 案例**
+```python
+# Import necessary libraries
+from pyspark.sql import SparkSession
+import pandas as pd
+
+# Create a Spark session
+spark = SparkSession.builder.appName("PandasAPISpark").getOrCreate()
+
+# Create a DataFrame
+data = [("Alice", 25), ("Bob", 30), ("Cathy", 35)]
+columns = ["name", "age"]
+df = spark.createDataFrame(data, columns)
+
+# Convert DataFrame to Pandas DataFrame
+pandas_df = df.toPandas()
+
+# Perform operations on Pandas DataFrame
+pandas_df['age_12_years_ago'] = pandas_df['age'] - 12
+
+# Convert Pandas DataFrame back to Spark DataFrame
+spark_df = spark.createDataFrame(pandas_df)
+
+# Show the result
+spark_df.show()
+
+# Stop the Spark session
+spark.stop()
+```
+
 
 ##### MLlib
 [MLlib](https://spark.apache.org/docs/latest/ml-guide.html) 是 Apache Spark 的机器学习库，提供了一系列用于构建和训练机器学习模型的工具和算法。MLlib 旨在简化机器学习的工作流程，并支持大规模数据集的处理。
