--- a/_posts/2024-09-06-spark.md
+++ b/_posts/2024-09-06-spark.md
@@ -236,86 +236,49 @@ spark.stop()
 ##### MLlib
 [MLlib](https://spark.apache.org/docs/latest/ml-guide.html) 是 Apache Spark 的机器学习库，提供了一系列用于构建和训练机器学习模型的工具和算法。MLlib 旨在简化机器学习的工作流程，并支持大规模数据集的处理。
 
-###### Features
-1. **丰富的算法库**: 包含分类、回归、聚类、协同过滤、降维等多种机器学习算法。
-2. **数据处理**: 提供数据预处理工具，如特征提取、转换和标准化，支持 DataFrame 和 RDD 数据结构。
-3. **管道 API**: 允许用户构建复杂的机器学习工作流，通过管道将多个处理步骤组合在一起。
-4. **模型评估**: 提供多种评估指标和交叉验证工具，帮助用户评估模型性能。
-5. **分布式计算**: 利用 Spark 的分布式计算能力，支持在大规模数据集上进行高效的模型训练和预测。
-
-###### Example
-以下是一个使用 MLlib 进行线性回归的简单示例：
-```python
-from pyspark.sql import SparkSession
-from pyspark.ml.regression import LinearRegression
-
-# Create SparkSession
-spark = SparkSession.builder \
-.appName("MLlibExample") \
-.getOrCreate()
-
-# Load training data
-data = spark.read.format("libsvm").load("data/mllib/sample_linear_regression_data.txt")
-
-# Create Linear Regression model
-lr = LinearRegression()
-
-# Fit the model
-lr_model = lr.fit(data)
-
-#Print the coefficients and intercept
-print(f"Coefficients: {lr_model.coefficients}")
-print(f"Intercept: {lr_model.intercept}")
-
-# Stop SparkSession
-spark.stop()
-```
-
 ##### GraphX
 [GraphX](https://spark.apache.org/docs/latest/graphx-programming-guide.html) 是 Apache Spark 的图计算库，旨在处理大规模图数据。GraphX 提供了一个统一的 API，用于图的创建、操作和分析，支持图的并行计算。
-
-###### Features
-1. **图表示**: GraphX 使用边（Edge）和顶点（Vertex）来表示图，支持有向图和无向图。
-2. **图计算**: 提供了多种图算法，如 PageRank、连接组件、最短路径等，方便用户进行图分析。
-3. **与 Spark 的集成**: GraphX 可以与 Spark 的其他组件（如 Spark SQL 和 MLlib）无缝集成，支持复杂的数据处理和分析任务。
-4. **灵活的 API**: 提供了基于 RDD 的 API，用户可以使用 Scala、Java 和 Python 进行图计算。
-
-###### Example
-以下是一个使用 GraphX 计算 PageRank 的简单示例：
-```python
-from pyspark.sql import SparkSession
-from pyspark.graphx import GraphLoader
-
-# Create SparkSession
-spark = SparkSession.builder \
-.appName("GraphXExample") \
-.getOrCreate()
-
-# Load graph data
-graph = GraphLoader.edgeListFile(spark, "data/graphx/followers.txt")
-
-# Compute PageRank
-ranks = graph.pageRank(maxIter=10).vertices
-
-# Print the results
-print(ranks.collect())
-
-# Stop SparkSession
-spark.stop()
-```
 
 ##### Structured Streaming
 [Structured Streaming](https://spark.apache.org/docs/latest/structured-streaming-programming-guide.html) 是 Spark 的流处理库，用于构建可扩展的流式数据处理应用程序。Structured Streaming 允许用户以批处理的方式处理流数据，同时保持了与批处理相同的编程模型。
 
-###### Features
-1. **编程模型**: 使用类似于批处理的编程模型来处理流数据，用户可以编写类似于批处理作业的代码来处理流数据。
-2. **数据源**: 支持多种数据源，如 Kafka、Socket、文件系统等，方便用户将现有数据迁移到流处理任务中。
-3. **数据格式**: 支持多种数据格式，如 CSV、JSON、Parquet 等，方便用户将现有数据迁移到流处理任务中。
-4. **数据处理**: 支持多种数据处理操作，如过滤、转换、聚合等，方便用户进行数据处理。
-5. **数据输出**: 支持多种数据输出方式，如 Kafka、Socket、文件系统等，方便用户将处理结果输出到外部系统。
+**Structured Streaming 案例**
 
-###### Example
-以下是一个使用 Structured Streaming 进行实时数据处理的简单示例：
+**1. 环境准备**
+- 安装 zookeeper, kafka 以及必要的一些依赖包
+```bash
+brew install zookeeper kafka
+pip install kafka-python
+wget https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.12/3.0.0/spark-sql-kafka-0-10_2.12-3.0.0.jar
+wget https://repo1.maven.org/maven2/org/apache/spark/spark-streaming-kafka-0-10-assembly_2.12/3.0.0/spark-streaming-kafka-0-10-assembly_2.12-3.0.0.jar
+wget https://repo1.maven.org/maven2/org/apache/commons/commons-pool2/2.9.0/commons-pool2-2.9.0.jar
+```
+
+- 启动 zookeeper
+```bash
+zookeeper-server-start /usr/local/etc/kafka/zookeeper.properties
+```
+
+- 启动 kafka
+```bash
+kafka-server-start /usr/local/etc/kafka/server.properties
+```
+
+- 创建 topic
+```bash
+kafka-topics --create --topic structured_streaming_demo --bootstrap-server localhost:9092 --partitions 1 --replication-factor 1
+```
+
+- 启动 kafka 生产者
+```bash
+kafka-console-producer --topic structured_streaming_demo --bootstrap-server localhost:9092
+```
+- 启动 spark shell
+```bash
+pyspark --jars jars/spark-sql-kafka-0-10_2.12-3.0.0.jar,jars/spark-streaming-kafka-0-10-assembly_2.12-3.0.0.jar,jars/commons-pool2-2.9.0.jar
+```
+
+**2. 代码实现**
 ```python
 from pyspark.sql import SparkSession
 from pyspark.sql.functions import explode, split
@@ -327,11 +290,12 @@ spark = SparkSession.builder \
 
 # Create DataFrame representing the stream of input data
 data = spark \
-.readStream \
-.format("socket") \
-.option("host", "localhost") \
-.option("port", 9999) \
-.load()
+    .readStream \
+    .format("kafka") \
+    .option("kafka.bootstrap.servers", "localhost:9092") \
+    .option("subscribe", "structured_streaming_demo") \
+    .option("startingOffsets", "earliest") \
+    .load()
 
 # Split the lines into words    
 words = data.select(explode(split(data.value, " ")).alias("word"))
@@ -348,9 +312,6 @@ query = wordCounts \
 
 # Wait for the query to finish
 query.awaitTermination()
-
-# Stop SparkSession
-spark.stop()
 ```
 
 ### Spark 性能调优
