--- a/_posts/2024-09-06-spark.md
+++ b/_posts/2024-09-06-spark.md
@@ -256,12 +256,12 @@ wget https://repo1.maven.org/maven2/org/apache/commons/commons-pool2/2.9.0/commo
 
 - 启动 zookeeper
 ```bash
-zookeeper-server-start /usr/local/etc/kafka/zookeeper.properties
+zookeeper-server-start /opt/homebrew/etc/kafka/zookeeper.properties
 ```
 
 - 启动 kafka
 ```bash
-kafka-server-start /usr/local/etc/kafka/server.properties
+kafka-server-start /opt/homebrew/etc/kafka/server.properties
 ```
 
 - 创建 topic
@@ -281,11 +281,12 @@ pyspark --jars jars/spark-sql-kafka-0-10_2.12-3.0.0.jar,jars/spark-streaming-kaf
 **2. 代码实现**
 ```python
 from pyspark.sql import SparkSession
-from pyspark.sql.functions import explode, split
+from pyspark.sql.functions import *
 
 # Create SparkSession
 spark = SparkSession.builder \
 .appName("StructuredStreamingExample") \
+.config("spark.sql.streaming.forceDeleteTempCheckpointLocation", 'true') \
 .getOrCreate()
 
 # Create DataFrame representing the stream of input data
@@ -297,16 +298,22 @@ data = spark \
     .option("startingOffsets", "earliest") \
     .load()
 
-# Split the lines into words    
-words = data.select(explode(split(data.value, " ")).alias("word"))
+# Select the necessary columns
+ark_holdings = data.select(split(data.value, ",")[0].alias("date"), 
+                    split(data.value, ",")[1].alias("fund_name"),
+                    split(data.value, ",")[2].alias("company_name"),
+                    split(data.value, ",")[3].alias("ticker"),
+                    split(data.value, ",")[6].alias("shares"),
+                    split(data.value, ",")[7].alias("market_value"),
+                    split(data.value, ",")[5].alias("weight"))
 
-# Count the occurrences of each word
-wordCounts = words.groupBy("word").count()
+# if market_value > 1000000, show the data
+weight_stock = ark_holdings.filter(col('market_value') > 1000000)
 
 # Start the query to stream the data
-query = wordCounts \
+query = weight_stock \
 .writeStream \
-.outputMode("complete") \
+.outputMode("append") \
 .format("console") \
 .start()
 
