--- a/_posts/2021-11-14-web3.md
+++ b/_posts/2021-11-14-web3.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "走进Web3的世界"
 date:   2021-11-14
-categories: blog
+categories: go_big
 ---
 
 由于加密货币逐渐走进人们视野，Web3这个词也一再被人提及。究竟Web3意味着什么，它对我们的生活可能会带来哪些值得期待的改变？为了有一个准确而全面的认识，我想通过这篇文章做一个梳理。
