--- a/_posts/2024-09-06-spark.md
+++ b/_posts/2024-09-06-spark.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Be a Good Data Engineer - Spark"
 date:   2024-09-06
-categories: blog
+categories: go_big
 ---
 
 ### Background
