--- a/_posts/2024-09-15-python.md
+++ b/_posts/2024-09-15-python.md
@@ -111,4 +111,74 @@ logging.basicConfig(filename='app.log', level=logging.INFO)
 logging.info('Program started')
 ```
 
+### Useful Libraries
+**1. [pdb](https://docs.python.org/3/library/pdb.html) —— The Python Debugger**
+
+pdb 是一个 python 中用于调试代码的模块，它的用法有两种，在代码行中插入：
+```python
+import pdb; pdb.set_trace()
+```
+或者使用 python3.7 之后内置的 `breakpoint()`
+
+**Example: Debug Guessing Number**
+
+random.randint(a, b) 返回一个 a <= N <= b 的随机整型，用 Python 执行下面的脚本得不到我们想要的结果。使用 breakpoint() 来寻找原因。
+
+```python
+# import pdb
+from random import randint
+
+# pdb.set_trace()
+breakpoint()
+answer = randint(0, 1)
+n = input("Guess: 0 or 1?")
+if n == answer:
+    breakpoint()
+    print("Correct!")
+else:
+    breakpoint()
+    print(f"Incorrect. The answer was {answer}.")
+```
+
+```bash
+-> answer = randint(0, 1)
+(Pdb) n
+-> n = input("Guess: 0 or 1?")
+(Pdb) !answer
+1
+(Pdb) n
+Guess: 0 or 1?1
+-> if n == answer:
+(Pdb) continue
+-> print(f"Incorrect. The answer was {answer}.")
+(Pdb) !(n == answer)
+False
+(Pdb) !type(n)
+<class 'str'>
+(Pdb) !type(answer)
+<class 'int'>
+(Pdb) continue
+Incorrect. The answer was 1.
+```
+
+通过 debug 发现，比较时变量 n 和变量 answer 类型不同，将第 7 行代码按如下调整即可修复功能：
+
+```python
+n = int(input("Guess: 0 or 1?"))
+```
+
+在 debug 模式下，键入 `help` 查看可以使用的所有命令，以下是开发中最常用的命令及其说明：
+
+| pdb Command   | Action                                           |
+|:------------- | ------------------------------------------------ |
+| n or next     | Run the next line of code                        |
+| s or step     | Step into current line(usually a function call)  |
+| r or return   | Return from the current function                 |
+| l or list     | List the surrounding code lines                  |
+| interact      | Starts an interactive Python interpreter         |
+| c or continue | Continue running (until next breakpoint or exit) |
+| b or break    | Set a breakpoint for a specific line or function |
+| !             | Special prefix to say "run this as Python code"  |
+| pp            | Pretty-print the value of a Python expression    |
+
 To be continued...
