--- a/_posts/2023-11-22-git_init.md
+++ b/_posts/2023-11-22-git_init.md
@@ -29,3 +29,53 @@ ssh -T git@github.com
 ```
 
 接下来就是正常git远程仓库操作。
+
+```bash
+## Creating a New Repository 
+git init 
+git add .
+git commit -m "Initial commit"
+git remote add origin https://github.com/<user>/<repo>.git
+git push --set-upstream origin main
+
+## Viewing History 
+git log 
+git blame <file>
+
+## Branching and Merging 
+git branch -av # show detail information of all branches
+git branch ‹new-branch> # create a new branch
+git switch <branch-name> # switch to a branch
+git checkout -b <new_branch> # create a new branch and switch to it
+git branch -d <branch> # Delete a local branch (only if merged)
+git branch -D <branch> # Force delete a local branch (even if unmerged)
+git merge <branch> # merge branch to current branch
+
+## Undoing Changes
+git checkout -- < file> # undo changes before git add
+git reset <file> # undo changes between git add and git commit
+git revert <commit-hash> # undo specific commit
+
+## Additional Essential Commands
+### Cloning a Repository 
+git clone https://github.com/<user>/<repo>.git
+### Pulling Changes from Remote 
+git pull origin master
+### Pushing Changes to Remote 
+git push origin <branch>
+
+### Stashing Changes 
+git stash # Stash changes
+git stash list # List all stashes
+git stash apply # Apply the latest stash
+git stash drop # Drop the latest stash
+
+### Tagging
+git tag ‹tag-name> # Create a new tag
+git tag # List all tags
+git push origin <tag-name> # Push tag to remote
+
+### Viewing Differences 
+git diff # Show changes between working directory and index
+git diff HEAD # Show changes between working directory and last commit
+```
