--- a/_posts/2024-10-08-survival.md
+++ b/_posts/2024-10-08-survival.md
@@ -13,7 +13,7 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 
 ## **01. 应急策略**
 
-无论是核战争还是飓风，金融大崩溃还是海啸，超级细菌还是丧尸病毒，如果真的发生，大体情形都非常类似。人为灾变可以引起自然灾变，自然灾变可以引起人为灾变。一旦建立在现代消费社会的文明遭到破坏，物资会匮乏，水电供应停止，很快传染性疾病就会爆发。昨天的抢购就会变成今天的抢劫，后天的杀人越货，大后天的…… 由于大部分人生活在城市中 ，而城市的生存极端依赖商业体系维护，在公路大堵车、电力中断的情况下，大多数物资很快会枯竭，在这种情况下，你的应急策略大体上有两个：
+无论是核战争还是飓风，金融大崩溃还是海啸，超级细菌还是丧尸病毒，如果真的发生，大体情形都非常类似。人为灾变可以引起自然灾变，自然灾变可以引起人为灾变。一旦建立在现代消费社会的文明遭到破坏，物资会匮乏，水电供应停止，很快传染性疾病就会爆发。昨天的抢购就会变成今天的抢劫，后天的杀人越货，大后天的…… 由于大部分人生活在城市中，而城市的生存极端依赖商业体系维护，在公路大堵车、电力中断的情况下，大多数物资很快会枯竭，在这种情况下，你的应急策略大体上有两个：
 
 **原地生存，苦撑待变；赶紧逃命，远走高飞。**
 
@@ -21,7 +21,7 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 
 而在这两者中间，是考虑五十至八十公里路程附近人口稀少的郊区。这可以给你更多平时准备的机会。
 
-而在背包之外，为了预备哪天上班路上天降伟人。你需要 “EDC”，即 “everyday carry”， 也就是每天外出不可或缺的用品，帮助你能安全地逃回家里拿背包。
+而在背包之外，为了预备哪天上班路上天降伟人。你需要 “EDC”，即 “everyday carry”，也就是每天外出不可或缺的用品，帮助你能安全地逃回家里拿背包。
 
 限于篇幅，**本文只讲赶紧逃命和就地求存的情况。**
 
@@ -33,7 +33,7 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 
 ![太平天国战争前后浙江省分府人口的变动](https://www.maicuole.com/wp-content/uploads/2020/03/doomsday-survival-guide-01.jpg)
 
-选择原地生存的话，你需要想象你所熟悉的一切商业文明都消失的状态，一分钟…… 然后深 呼吸，是不是突然觉得现在花些钱存一点好划算？
+选择原地生存的话，你需要想象你所熟悉的一切商业文明都消失的状态，一分钟…… 然后深呼吸，是不是突然觉得现在花些钱存一点好划算？
 
 在所有策略之前，是一条至理名言：你不是要摆酷。所以尽量低调、低调、低调！
 
@@ -51,7 +51,7 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 
 现在让我们来划一下重点。
 
-**首先得保证充足的饮用水。** 一个成年人每天的饮水量在二升左右，夏天会多一点。无 论原地生存还是逃命，你都需要很多水。
+**首先得保证充足的饮用水。** 一个成年人每天的饮水量在二升左右，夏天会多一点。无论原地生存还是逃命，你都需要很多水。
 
 原地生存的话，务必多备储水容器，在有警报或者坏新闻时装满家里的储水容器，即使没有预警时，也应该装满一些容器定期更换。同时购买或自己灌装瓶装、桶装水。
 
@@ -63,7 +63,7 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 
 如果要出逃，按照七十二小时计划，一个人应该至少携带五升水，**前提是你同时有便携式净水器或净水药片**，而且沿途确实有比较清澈的水源。净水药片也应该按照可净化水量储备相应的量，但这玩意儿很轻，你不必担心超重，可以多带一点，甚至在关键时刻当货币用。
 
-清洗用水也非常重要。其中最重要的是洗手，大多数疾病会通过手传播。考虑到排泄污物的泛滥，手会有更大机会沾染致病菌。而此时水已经非常宝贵。**你可以考虑购买更多手套和免水消毒液来洗手。** 或者用小杯子慢慢倒的方法尽可能省水地洗手。洗澡可以主要靠下 雨，很酷，不是吗？如果用储备水洗澡，一定保证伤员优先。衣物要定期清洗晾晒。
+清洗用水也非常重要。其中最重要的是洗手，大多数疾病会通过手传播。考虑到排泄污物的泛滥，手会有更大机会沾染致病菌。而此时水已经非常宝贵。**你可以考虑购买更多手套和免水消毒液来洗手。** 或者用小杯子慢慢倒的方法尽可能省水地洗手。洗澡可以主要靠下雨，很酷，不是吗？如果用储备水洗澡，一定保证伤员优先。衣物要定期清洗晾晒。
 
 **要有足够的食物，重要原则：保质期长。逃命的话，热量高。原地的话，营养全。**
 
@@ -75,9 +75,9 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 
 **烹饪器材也需留心：铝制的锅子、杯子**，无论是在原地还是逃亡，你都需要加热食品，尤其是饮用水；**燃料**，固体酒精、液化气便携装适合逃亡，家用液化气、液体酒精、燃油、木头、煤适合原地。数量多少很难确定，要看水质和天气。你需要做好很快要拆家具烧的准备。其他必备：**开罐刀**，当然最好是组合工具，可以多用途。勺子或者筷子。取火，打火机一打，考虑到易损耗，应该备用一些镁条打火棒。**便携炉**，你储备什么燃料就配套什么炉子，主要是，压缩燃气和直接点。建议都备。
 
-**保证有得穿。** 如果采取原地策略，衣物一般不会成为问题。如果逃亡，应该至少有两 套衣物，内衣可以适当再增加，袜子至少四双。挑选原则是：速干、耐用、宽松、适合季节、颜色黯淡（低调！记得吧）。《逃生背包》认为牛仔裤很不合适出逃，因为棉布吸潮，很难干，建议用混纺的。
+**保证有得穿。** 如果采取原地策略，衣物一般不会成为问题。如果逃亡，应该至少有两套衣物，内衣可以适当再增加，袜子至少四双。挑选原则是：速干、耐用、宽松、适合季节、颜色黯淡（低调！记得吧）。《逃生背包》认为牛仔裤很不合适出逃，因为棉布吸潮，很难干，建议用混纺的。
 
-**鞋子要选登山靴或远足鞋**，请务必之前穿软了！想想你可能要走 100 多公里，帽子， 遮阳、挡雨、低调；雨披，合适的雨披有多种用途，可以搭帐篷、当地垫，即使没有下雨，它也有助于你清晨防止露水，甚至取代普通外套来御寒。手套，御寒手套和工作手套，有些人家里可能已经没有工作手套了，这可能是这部分唯一家里一般找不到的东西。所以对于原地求生也很重要，你不希望自己挖坑、劈柴的时候把手弄破皮的，这种时候的任何伤病都可能是致命的。其他保护：太阳镜、口罩。
+**鞋子要选登山靴或远足鞋**，请务必之前穿软了！想想你可能要走 100 多公里，帽子，遮阳、挡雨、低调；雨披，合适的雨披有多种用途，可以搭帐篷、当地垫，即使没有下雨，它也有助于你清晨防止露水，甚至取代普通外套来御寒。手套，御寒手套和工作手套，有些人家里可能已经没有工作手套了，这可能是这部分唯一家里一般找不到的东西。所以对于原地求生也很重要，你不希望自己挖坑、劈柴的时候把手弄破皮的，这种时候的任何伤病都可能是致命的。其他保护：太阳镜、口罩。
 
 ![天幕帐](https://www.maicuole.com/wp-content/uploads/2018/09/outdoor-camping-tent-003.jpg)
 
@@ -85,7 +85,7 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 
 **还有药品**，复合维生素、阿司匹林（当然中药爱好者，请替换成板蓝根）、急救套装（包含外伤的一系列用品。创可贴、绷带等碘酒务必要有，不仅能处理外伤，还能处理饮用水，因为很多时候你根本没时间烧开水喝。）胃肠药、皮肤药膏、治过敏（扑尔敏、息斯敏）眼药水（用完了瓶子也别扔，很有用）、驱虫剂、橡胶手套、牙刷牙膏牙线（不会再有牙医诊所了。想一想《荒岛余生》里面汤姆汉克斯因为牙痛，不得不把用石头把牙砸掉，爱护牙齿吧）、纸巾、洗衣粉、肥皂、84 消毒液。
 
-**最重要的还有武器**，就是可以用来攻击其他动物和人类的东西。你越是希望保持文明状态，就越需要武器，两个都拿原子弹的人打起来的可能性几乎没有。当然，原则仍然是 “低调”！不怕坏人抢，就怕坏人惦记。清单如下：
+**最重要的还有武器**，就是可以用来攻击其他动物和人类的东西。你越是希望保持文明状态，就越需要武器，两个都拿原子弹的人打起来的可能性几乎没有。当然，原则仍然是“低调”！不怕坏人抢，就怕坏人惦记。清单如下：
 
 -   渔具包
 -   野营刀
@@ -110,7 +110,7 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 -   线锯。最方便携带的锯子，逃亡路上锯树。也可以作为陷阱材料。
 -   密封袋。放重要物品。火种、药品、地图等。
 -   垃圾袋。不是很薄的那种。要厚黑型！
--   N95。中国人民的老朋友，不仅能在烟尘中保护呼吸系统，还能用来过滤饮用水，但不 要买带呼吸阀的款式。
+-   N95。中国人民的老朋友，不仅能在烟尘中保护呼吸系统，还能用来过滤饮用水，但不要买带呼吸阀的款式。
 -   绳索。非常重要。无论原地还是逃亡。推荐 550 伞绳。
 -   针线包。再也没有淘宝让你买衣服了。还可以拔牙和给自己缝皮。
 -   胶带。不推荐透明胶带。布基胶带要有用的多。补帐篷、工具、武器……
@@ -124,7 +124,7 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 
 ## **03. 技能**
 
-可以参考《怀斯曼生存手册》。
+可以参考《怀斯曼生存手册》(ISBN: 9787531721666)。
 
 原则：上述物资的使用和保存方法。
 
@@ -173,6 +173,6 @@ date_saved: 2024-10-08 10:03:16 | date_published:2023-07-20 16:46:43
 
 当然，如果你实在找不到合适的地球人。汪星人是很好的替代方案。
 
-应该说，正在看这条微信的你，几乎都是过惯太平日子的人。我们认为这样的生活理所当然，却不知平和不过是争战的假象。且不说世界上还有多少地方战火纷飞，和我们一样的人就像稻草一样被收割屠宰却根本无人在乎；就是在我们日常生活的市镇，夜深人静之时也会发生触目惊心的暴力事件。现代世界就像一栋纸牌屋，看似有序华丽，却异常脆弱，只要抽掉一张，所有的一切就都会崩溃。到时，很多像你我一样沉溺于 “日常生活” 的人，恐怕连喊都喊不出一声，就会被暴力的洪水淹没；要么，就成为无序暴力的一份子。
+应该说，正在看这条微信的你，几乎都是过惯太平日子的人。我们认为这样的生活理所当然，却不知平和不过是争战的假象。且不说世界上还有多少地方战火纷飞，和我们一样的人就像稻草一样被收割屠宰却根本无人在乎；就是在我们日常生活的市镇，夜深人静之时也会发生触目惊心的暴力事件。现代世界就像一栋纸牌屋，看似有序华丽，却异常脆弱，只要抽掉一张，所有的一切就都会崩溃。到时，很多像你我一样沉溺于“日常生活”的人，恐怕连喊都喊不出一声，就会被暴力的洪水淹没；要么，就成为无序暴力的一份子。
 
-如果你准备预先体验一把末日生存，不妨看看这本[《〈汤姆・克兰西：全境封锁〉艺术设 定集》](https://s.click.taobao.com/t?e=m%3D2%26s%3DBoaUL%2Bnkzl4cQipKwQzePOeEDrYVVa64K7Vc7tFgwiHjf2vlNIV67pWKv4xtQAm%2Bxa9spvDO8ClKVk%2FYB1WuCy6Ovj%2FgvM%2BHxBjtGdBy7GT6bq1QtLaFKbwJBiNCwGbxDBWrnS6v1m3hS87RBUhPyoJG2C7ZCMsJccbfT12Z03Rh5%2F5FmblrGsYl7w3%2FA2kb&scm=null&pvid=null&app_pvid=59590_11.1.89.194_491_1586668336432&ptl=floorId%3A17741&originalFloorId%3A17741&app_pvid%3A59590_11.1.89.194_491_1586668336432&union_lens=lensId%3APUB%401586668326%400b1a25c7_0e19_1716ccd4d96_9d3c%40023TVpTBteD9ACCuKTZXqNGe)，对滔天 “洪水” 洗刷后的世界有个大概的印象也不错。
+如果你准备预先体验一把末日生存，不妨看看这本《〈汤姆・克兰西：全境封锁〉艺术设定集》(ISBN: 9787513322133)，对滔天“洪水”洗刷后的世界有个大概的印象也不错。
