add photo to wukong

--- a/_posts/2024-08-24-wukong.md
+++ b/_posts/2024-08-24-wukong.md
@@ -6,6 +6,7 @@ categories: blog
 ---
 ### PC Build List
 Total cost is 5310.
+![装机清单](https://www.dropbox.com/scl/fi/v42h77jxeq76fy4n3ag53/IMG_4299.jpg?rlkey=ppbvz9dnjlzuttnclo92uv3ia&st=ws68labu&raw=1)
 
 | item              | model                             | channel | price |
 |:----------------- |:--------------------------------- | ------- | ----- |
@@ -19,6 +20,7 @@ Total cost is 5310.
 | Motherboard       | 技嘉 AMD B650M GAMING WIFI        | JD      | 739   |
 | SSD(optional)     | Lexar ARES M.2 pcie4.0 nvmeSSD 1T | TMall   | 521   |
 
+![过程1](https://www.dropbox.com/scl/fi/frq6p3g6rojs3vk1h7hzq/IMG_4313.jpg?rlkey=7bbhd3w11gpbi1qk24pi4sj9m&st=ph58hqyd&raw=1)
 ### Create Bootable Windows 11 USB Disk
 When the computer is ready, you need a Windows system boot disk. I'll do this on a MacOS.
 
@@ -66,3 +68,4 @@ wimlib-imagex split /Volumes/CCCOMA_X64FRE_EN-US_DV9/sources/install.wim /Volume
 - Enter `clean` to delete all partitions and volumes on the disk;
 - Enter `convert gpt` to convert the MBR disk to the GPT partition format.
 The diskpart process notifies you when the conversion completes.
+![ALl Done](https://www.dropbox.com/scl/fi/qgnnmlzgjorfax1pl7yir/IMG_4319.jpg?rlkey=npyxd6e7fk7o1t9341y180h6s&st=cdydjkin&raw=1)
