add photo to wukong

--- a/_posts/2024-08-24-wukong.md
+++ b/_posts/2024-08-24-wukong.md
@@ -20,7 +20,7 @@ Total cost is 5310.
 | Motherboard       | 技嘉 AMD B650M GAMING WIFI        | JD      | 739   |
 | SSD(optional)     | Lexar ARES M.2 pcie4.0 nvmeSSD 1T | TMall   | 521   |
 
-![过程1](https://www.dropbox.com/scl/fi/frq6p3g6rojs3vk1h7hzq/IMG_4313.jpg?rlkey=7bbhd3w11gpbi1qk24pi4sj9m&st=ph58hqyd&raw=1)
+![撞击效果](https://www.dropbox.com/scl/fi/frq6p3g6rojs3vk1h7hzq/IMG_4313.jpg?rlkey=7bbhd3w11gpbi1qk24pi4sj9m&st=ph58hqyd&raw=1)
 ### Create Bootable Windows 11 USB Disk
 When the computer is ready, you need a Windows system boot disk. I'll do this on a MacOS.
 
